# MvQuant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/mvquant/dashboard/: app.py
src/mvquant/dataloader/: api.py  dataloader.py
src/mvquant/datasets/: HNXINDEX.parquet  UPINDEX.parquet  VNINDEX.parquet  data.json  vn_holiday_2025.csv
src/mvquant/models/: DLinear.py  NLinear.py  PatchTST.py  __init__.py  stat_models.py
src/mvquant/models/checkpoints/: model_HNXINDEX_dlinear.pth  model_UPINDEX_dlinear.pth  model_VNINDEX_dlinear.pth  model_VNINDEX_dlinear_origin.pth
src/mvquant/models/conformal/: EnbPI.py
src/mvquant/models/layers/: SelfAttention_Family.py
src/mvquant/notebooks/: stat_models.ipynb  train.ipynb
